--- a/src/app/views/admin/dashboard/dashboard/dashboard.component.html
+++ b/src/app/views/admin/dashboard/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
                         <i class="material-icons-two-tone">search</i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right pc-h-dropdown drp-search">
-                        <form (ngSubmit)="search()" #searcheForm="ngForm" class="px-3">
+                        <form  #searcheForm="ngForm" class="px-3">
                             <div class="form-group mb-0 d-flex align-items-center">
                                 <i data-feather="search"></i>
                                 <input type="search" class="form-control border-0 shadow-none" placeholder="Search here. . .">
