--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,4 +1,5 @@
 <!-- [ navigation menu ] start -->
+<div class="biggerContainer">
 <nav class="pc-sidebar ">
     <div class="navbar-wrapper">
         <div class="m-header">
@@ -10,9 +11,7 @@
         </div>
         <div class="navbar-content">
             <ul class="pc-navbar">
-                <li class="pc-item pc-caption">
-                    <label>Navigation</label>
-                </li>
+                
                 <li class="pc-item">
                     <a routerLink="dashboard" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">home</i></span><span class="pc-mtext">Dashboard</span></a>
                 </li>
@@ -20,56 +19,17 @@
             
             
                 <li class="pc-item pc-hasmenu">
-                    <a routerLink="auth" class="pc-link"><span class="pc-micon"><i class="material-icons-two-tone">https</i></span><span class="pc-mtext">Authentication</span><span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                    <ul class="pc-submenu">
-                        <li class="pc-item"><a class="pc-link" href="auth-signup.html" target="_blank">Sign up</a></li>
-                        <li class="pc-item"><a class="pc-link" href="auth-signin.html" target="_blank">Sign in</a></li>
-                    </ul>
+                    <a routerLink="auth" class="pc-link"><span class="pc-micon"><i class="material-icons-two-tone">https</i></span><span class="pc-mtext">employees</span><span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>                    
                 </li>
-                <li class="pc-item pc-caption">
-                    <label>Other</label>
-                    <span>Extra more things</span>
-                </li>
-                <li class="pc-item pc-hasmenu">
-                    <a routerLink="CRM" class="pc-link"><span class="pc-micon"><i class="material-icons-two-tone">list_alt</i></span><span class="pc-mtext">CRM</span><span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                    <ul class="pc-submenu">
-                        <li class="pc-item"><a class="pc-link" href="#!">Menu Level 2.1</a></li>
-                        <li class="pc-item pc-hasmenu">
-                            <a href="#!" class="pc-link">Menu level 2.2<span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                            <ul class="pc-submenu">
-                                <li class="pc-item"><a class="pc-link" href="#!">Menu level 3.1</a></li>
-                                <li class="pc-item"><a class="pc-link" href="#!">Menu level 3.2</a></li>
-                                <li class="pc-item pc-hasmenu">
-                                    <a href="#!" class="pc-link">Menu level 3.3<span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                                    <ul class="pc-submenu">
-                                        <li class="pc-item"><a class="pc-link" href="#!">Menu level 4.1</a></li>
-                                        <li class="pc-item"><a class="pc-link" href="#!">Menu level 4.2</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="pc-item pc-hasmenu">
-                            <a href="#!" class="pc-link">Menu level 2.3<span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                            <ul class="pc-submenu">
-                                <li class="pc-item"><a class="pc-link" href="#!">Menu level 3.1</a></li>
-                                <li class="pc-item"><a class="pc-link" href="#!">Menu level 3.2</a></li>
-                                <li class="pc-item pc-hasmenu">
-                                    <a href="#!" class="pc-link">Menu level 3.3<span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-                                    <ul class="pc-submenu">
-                                        <li class="pc-item"><a class="pc-link" href="#!">Menu level 4.1</a></li>
-                                        <li class="pc-item"><a class="pc-link" href="#!">Menu level 4.2</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="pc-item"><a href="sample-page.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">storefront</i></span><span class="pc-mtext">Sample page</span></a></li>
 
-            </ul>
+              </ul>
+
         </div>
     </div>
 </nav>
 <!-- [ navigation menu ] end -->
+<div class="containerBig">
 <router-outlet></router-outlet>
+</div>
+</div>
 
