--- a/src/app/views/admin/auth/auth/add-employee/add-employee/add-employee.component.html
+++ b/src/app/views/admin/auth/auth/add-employee/add-employee/add-employee.component.html
@@ -139,7 +139,7 @@
                         <div class="form-group">
                             <label for="lastName">Last name</label>
                             <input type="text" class="form-control w-100" name="lastName" id="lastName"
-                                [(ngModel)]="request.lastName" aria-describedby="lastNameHelp" placeholder="mouradi">
+                                [(ngModel)]="request.lastName" aria-describedby="lastNameHelp" placeholder="brahem">
                             <small id="lastNameHelp" class="form-text text-muted">We'll never share your information
                                 with anyone else.</small>
                         </div>
