--- a/src/app/views/admin/auth/auth/auth.component.html
+++ b/src/app/views/admin/auth/auth/auth.component.html
@@ -108,7 +108,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="page-header-title">
-                            <h5 class="m-b-10">Emplpoyees</h5>
+                            <h5 class="m-b-10">Employees</h5>
                         </div>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -116,8 +116,11 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>     
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="navigateToAddUser()">Add  Employee</button>
+
         </div>
+        
         <!-- [ breadcrumb ] end -->
         <!-- [ Main Content ] start -->
         <!---->
