--- a/src/app/authentication/component/signin/signin.component.html
+++ b/src/app/authentication/component/signin/signin.component.html
@@ -18,6 +18,8 @@
         <input type="password" [(ngModel)]="password" name="password" class="form-control" id="password" placeholder="Enter password" required>
     </div>
     <button type="submit">Sign In</button>
+    <a routerLink="/forgotpwd" class="forgot-password-link">Forgot Password?</a>
+
   </form>
 </div>
 
