--- a/src/app/views/admin/dashboard/dashboard/dashboard.component.css
+++ b/src/app/views/admin/dashboard/dashboard/dashboard.component.css
@@ -13,4 +13,30 @@
   .transparent:hover {
     background-color: #0056b3;
   }
-  
+  /* CSS */
+.statistics-cards {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+.card h3 {
+  margin-bottom: 16px;
+}
+
+.card ul {
+  list-style: none;
+  padding: 0;
+}
+
+.card li {
+  margin-bottom: 10px;
+}
