--- a/src/app/views/admin/auth/auth/auth.component.html
+++ b/src/app/views/admin/auth/auth/auth.component.html
@@ -243,7 +243,7 @@
                                         <td>{{user.email}}</td>
                                         <td>connected</td>
                                         <td>{{user.phoneNumber}}</td>
-                                        <td>employee</td>
+                                        <td>{{user.role[0]}}</td>
 
                                     </tr>
                                 </tbody>
